--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,33 +1,36 @@
 <header>
+
     <div class="mini-navbar-wrap">
         <div class="logo-wrap">
             <p class="logo"><span class="logo">SoftUni Forum</span></p>
         </div>
-        <div class="mini-navbar" *ngIf="!isLogged">
+        <div class="mini-navbar">
             <ul>
-                <li>
-                    <a href="#" (click)="loginHandler()">Login</a>
+                <li *ngIf="isLogged">
+                    <a routerLink="user/profile">John's profile</a>
                 </li>
-                <li>
-                    <a href="#">Register</a>
+                <li *ngIf="isLogged">
+                    <a (click)="logoutHandler()">Logout</a>
+                </li>
+                <li *ngIf="!isLogged">
+                    <a routerLink="user/login">Login</a>
+                </li>
+                <li *ngIf="!isLogged">
+                    <a routerLink="user/register">Register</a>
                 </li>
             </ul>
-        </div>
-        <div class="mini-navbar" *ngIf="isLogged">
-            <div>Hello, [username]@localdomain.com</div>
-            <a href="" (click)="logoutHandler()">Logout</a>
         </div>
     </div>
     <nav>
         <ul>
             <li>
-                <a href="#">Home</a>
+                <a routerLink="/home">Home</a>
             </li>
             <li>
-                <a href="#">Themes</a>
+                <a routerLink="/theme">Themes</a>
             </li>
             <li>
-                <a href="#">New Theme</a>
+                <a routerLink="/theme/new">New Theme</a>
             </li>
         </ul>
     </nav>
