--- a/src/app/user/profile/profile.component.css
+++ b/src/app/user/profile/profile.component.css
@@ -48,13 +48,14 @@
     outline: none;
 }
 
-.flex > input, .flex > div {
+.flex>input,
+.flex>div {
     width: 55%;
     text-align: left;
     margin: .5em;
 }
 
-.flex > div > input {
+.flex>div>input {
     width: 77%;
 }
 
