--- a/src/app/theme/detail/detail.component.html
+++ b/src/app/theme/detail/detail.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="theme">
     <!-- theme content  -->
     <div class="theme-content">
         <!-- theme-title  -->
@@ -16,43 +16,25 @@
             </div>
         </div>
         <!-- comment  -->
-        <div class="comment">
+        <div class="comment" *ngFor="let comment of theme.posts">
             <header class="header">
-                <p><span>David</span> posted on <time>2020-10-10 12:08:28</time></p>
+                <p><span>{{comment.userId.username}}</span> posted on <time>{{comment.created_at}}</time></p>
             </header>
             <div class="comment-main">
                 <div class="userdetails">
-                    <img src="./profile.png" alt="avatar">
+                    <img src="/assets/profile.png" alt="avatar">
                 </div>
                 <div class="post-content">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure facere sint dolorem quam, accusantium ipsa veniam laudantium inventore aut, tenetur quibusdam doloribus. Incidunt odio nostrum facilis ipsum dolorem deserunt illum?</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure facere sint dolorem quam, accusantium ipsa veniam laudantium inventore aut, tenetur quibusdam doloribus. Incidunt odio nostrum facilis ipsum dolorem deserunt illum?</p>
+                    <p>{{comment.text}}</p>
                 </div>
             </div>
             <div class="footer">
                 <!-- <i class="fas fa-thumbs-up"></i>
                 <i class="fas fa-thumbs-down"></i> -->
-                <p><span>5</span> likes</p>
+                <p><span>{{comment.likes.length}}</span> likes</p>
             </div>
         </div>
-        <div class="comment">
-            <header class="header">
-                <p><span>Mark</span> posted on <time>2020-10-10 14:28:11</time></p>
-            </header>
-            <div class="comment-main">
-                <div class="userdetails">
-                    <img src="./profile.png" alt="avatar">
-                </div>
-                <div class="post-content">
-                    <p>Lorem ipsum dolor sit amet consectetur </p>
-                </div>
-            </div>
-            <div class="footer">
-                <!-- <i class="fas fa-thumbs-up"></i>
-                <i class="fas fa-thumbs-down"></i> -->
-                <p><span>3</span> likes</p>
-            </div>
-        </div>
+
         <div class="answer-comment">
             <p><span>currentUser</span> comment:</p>
             <div class="answer">
@@ -65,3 +47,5 @@
 
     </div>
 </div>
+
+<app-loader [isLoading]="!theme"></app-loader>
